--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
 
-<script>
+<script> Adding a single comment 
   // Initialization
   const boxes = Array.from(document.querySelectorAll("td"));
   const inputs = Array.from(document.querySelectorAll("[type=checkbox]"));
